fix: arreglos con whitespace en descripción de activ.

--- a/src/components/ActivityDetails/ActivityDetails.module.css
+++ b/src/components/ActivityDetails/ActivityDetails.module.css
@@ -19,6 +19,7 @@
 
 .description{
   width: 100%;
+  white-space: pre;
 }
 
 .promosContainer {
